Naprawiono śledzenie użytkownika na mapie. Śledzenie jest przerywane gdy użytkownik wykona interakcje z mapą.